--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Grabbe, Christian Dietrich, 1801-1836'
 - !lcc 'PT'
+- GITenberg
 title: Grabbes doppeltes Gesicht
 url: http://www.gutenberg.org/ebooks/37229
